*Empty MediaWiki Message*

--- a/რუჰოლა_ხომეინი.mw
+++ b/რუჰოლა_ხომეინი.mw
@@ -1,6 +1,7 @@
-[[სურათი:Khomeini.jpg|thumb|აიათოლა ხომეინი - ირანის ისლამური რესპუბლიკის დამაარსებელი.]] [[აიათოლა]] სეიედ '''რუჰოლა ხომეინი''' (სპარს.: آیت‌الله روح‌الله خمینی არაბ.: روح الله الخميني ) (პირდაპ. მნიშვ. რუჰოლა - ალაჰის სული) (*[[17 მაისი]], [[1900]] - [[3 ივნისი]], [[1989]]) - ირანელი [[შიითური ისლამი|შიითი]] მუსლიმი კლერკი, პოლიტიკური და სულიერი ლიდერი [[1979]] წლის [[ირანის რევოლუცია|ისლამური რევოლუციისა]], რომლის შედეგად ტახტიდან ჩამოგდებულ იქნა [[მოჰამად რეზა ფაჰლავი]], [[ირანი|ირანის]] ბოლო [[შაჰი]]. ხომეინი სულიერ მამადაა მიჩნეული მრავალი შიითი მუსლიმანისთვის და ირანში მას ოფიციალურად [[იმამი|იმამს]] უწოდებენ აიათოლას ნაცვლად, ისევე როგორც მისი მოძღვრების მიმდევრები. ხომეინს ბევრი მე-20 საუკუნის ერთ-ერთ ყველაზე გავლენიან ადამიანად მიიჩნევს და ჟურნალმა "[[ტაიმი (ჟურნალი)|ტაიმი]]" ის 1979 წელს წლის ადამიანად გამოცხადა.
+[[სურათი:Khomeini.jpg|thumb|აიათოლა ხომეინი - ირანის ისლამური რესპუბლიკის დამაარსებელი.]] 
+[[აიათოლა]] სეიედ '''რუჰოლა ხომეინი''' (სპარს.: آیت‌الله روح‌الله خمینی არაბ.: روح الله الخميني ) (პირდაპ. მნიშვ. რუჰოლა - ალაჰის სული) (*[[17 მაისი]], [[1900]] - [[3 ივნისი]], [[1989]]) - ირანელი [[შიითური ისლამი|შიითი]] მუსლიმი კლერკი, პოლიტიკური და სულიერი ლიდერი [[1979]] წლის [[ირანის რევოლუცია|ისლამური რევოლუციისა]], რომლის შედეგად ტახტიდან ჩამოგდებულ იქნა [[მოჰამად რეზა ფაჰლავი]], [[ირანი|ირანის]] ბოლო [[შაჰი]]. ხომეინი სულიერ მამადაა მიჩნეული მრავალი შიითი მუსლიმანისთვის და ირანში მას ოფიციალურად [[იმამი|იმამს]] უწოდებენ აიათოლას ნაცვლად, ისევე როგორც მისი მოძღვრების მიმდევრები. ხომეინს ბევრი მე-20 საუკუნის ერთ-ერთ ყველაზე გავლენიან ადამიანად მიიჩნევს და ჟურნალმა "[[ტაიმი (ჟურნალი)|ტაიმი]]" ის 1979 წელს წლის ადამიანად გამოცხადა.
 
-{{ესკიზი}}
+{{ბიოგრაფია}}
 
 [[კატეგორია:აიათოლები]]
 [[კატეგორია:ირანის ლიდერები]]
