*Empty MediaWiki Message*

--- a/ვიქტორ_იუშჩენკო.mw
+++ b/ვიქტორ_იუშჩენკო.mw
@@ -3,7 +3,7 @@
 
 იუშენკო 1993-1999 წლებში მსახურობდა ქვეყნის ეროვნული ბანკის თავმჯდომარედ, ხოლო 1999-2001 წლებში კი უკრაინის პრემიერ-მინისტრად.
 
-{{ესკიზი}}
+{{ბიოგრაფია}}
 
 ==რესურსები ინტერნეტში==
 * [http://ww2.yuschenko.com.ua/eng/ ვიქტორ იუშენკოს პირადი ვებ-გვერდი "ჩემი უკრაინა"]
