--- a/ბენ_ბერნანკე.mw
+++ b/ბენ_ბერნანკე.mw
@@ -13,7 +13,8 @@
 ==ჯილდოები==
 *ეკონომეტრიკის საზოგადოების სტიპენდიანტი.
 ==ბიბლიოგრაფია==
-{{ესკიზი}}
+{{ბიოგრაფია}}
+
 ==რესურსები ინტერნეტში==
 *[http://www.whitehouse.gov/cea/bbernankebio.html ბერნანკეს ბიო თეთრი სახლის ვებ-გვერდზე]
 *[http://www.princeton.edu/~bernanke/ ბერნანკეს გვერდი პრინსტონის უნივერსიტეტის ვებ-გვერდზე]
