*Empty MediaWiki Message*

--- a/ალან_გრინსპენი.mw
+++ b/ალან_გრინსპენი.mw
@@ -14,10 +14,11 @@
 
 1948-1953 წელბში გრინსპენი ეკონომიკურ ანალისტად მუშაობს Conference Board-სთვის - ბიზნეს-ინდუსტრიული ორიენტაციის კვლევითი გუნდი ნიუ-იორკში. 1955-2005 წლებში გრინსპენი ნიუ-იორკის ეკონომიკურ-საკონსულტაციო ფირმის "ტაუნსენდ-გრინსპენ და კომპანიის" თავმჯდომარე და შემდეგ პრეზიდენტი ხდება. ამავე დროს 1974-1977 წლებში გრინსპენი ეკონომიკურ მრჩეველთა საბჭოს თავმჯდომარეა პრეზიდენტ [[ფორდი, ჯერალდ|ჯერალდ ფორდთან]]. ასევე მას კორპორაციულ დირექტორად უმსახურია შემდეგ კერძო დაწესებულებებში: Aluminum Company of America (Alcoa); Automatic Data Processing, Inc.; Capital Cities/ABC, Inc.; General Foods, Inc.; J.P. Morgan & Co., Inc.; Morgan Guaranty Trust Company of New York; Mobil Corporation; და The Pittston Company.
 
-{{ესკიზი}}
+{{ბიოგრაფია}}
 
-[[კატეგორია:ეკონომისტები]]
-[[კატეგორია:ამერიკის ფედერალური რეზერვის თავმჯდომარეები]]
+[[კატეგორია:ამერიკელები
+[[კატეგორია:ამერიკელი ეკონომისტები]]
+[[კატეგორია:ამერიკის ფედერალური რეზერვის საბჭოს თავმჯდომარეები]]
 
 [[bg:Алън Грийнспан]]
 [[br:Alan Greenspan]]
