*Empty MediaWiki Message*

--- a/ალან_გრინსპენი.mw
+++ b/ალან_გრინსპენი.mw
@@ -16,7 +16,7 @@
 
 {{ბიოგრაფია}}
 
-[[კატეგორია:ამერიკელები
+[[კატეგორია:ამერიკელები]]
 [[კატეგორია:ამერიკელი ეკონომისტები]]
 [[კატეგორია:ამერიკის ფედერალური რეზერვის საბჭოს თავმჯდომარეები]]
 
