--- a/ჯონ_უიკლიფი.mw
+++ b/ჯონ_უიკლიფი.mw
@@ -15,6 +15,7 @@
 ==ვიკლიფის დოქტრინა==
 ==რესურსები ინტერნეტში==
 
+{{ბიოგრაფია}}
 [[კატეგორია:ქრისტიანული რეფორმატორები]]
 [[კატეგორია:ერეტიკოსად შერაცხულნი]]
 [[კატეგორია:ინგლისელები]]
