--- a/ჟან_შარდენი.mw
+++ b/ჟან_შარდენი.mw
@@ -17,9 +17,9 @@
 ==მნიშვნელობა==
 თანამედროვე მეცნიერ-მკვლევარები "მოგზაურობის" [[1811]] წლის გამოცემას (რედაქტირებული ორიენტალისტი ლუი-მეთიუ ლანგლეს მიერ) სტანდარტულ ვერსიად მიიჩნევენ.
 
-შარდენის ნამუშევრის ადრეული მკითხველები გააოცა მისმა ყოვლისმომცველმა და მხატვრულმა აღწერამ, და მას მრავალ დიდ მოაზროვნეთა ქება დაუმსახურებია, მათ შორის იყვნენ: მონტესკიუ, რუსო, ვოლტერი და გიბონი. სპარსეთის გვიანდელი მკვლევარები ასევე ხაზს უსვამენ ამ ნამუშევრის ისტორიულ მნიშვნელობას. ჯონ ემერსონის თანახმად: "მისი ინფორმაცია საფავიდი სპარსეთის შესახებ წინ უსწრებს ყველა სხვა დასავლეთის მწერალს სიღმნით, აკურატულობით, მიუკერძოებლობითა და ყოვლისმომცველობით." შარდენი შორს სწვდებოდა, მას თითქმის ყველა კუთხე-კუნჭული ჰქონდა მოვლილი, კარგად ფლობდა სპარსულს, და დატოვა დეტალური აღწერა ყველა იმ ადგილისა და ხალხისა, რომელიც კი გზად მოინახულა. მას ასევე პირდაპირი კავშირი ჰქონდა საფავიდთა სამეფო კართან და მისი აღწერა საფავიდთა თანამედროვე პოლიტიკისა და ადმინისტრაციისა საკმაოდ სრულ ინფორმაციას გვიტოვებს. თუმცა წიგნში შიგადაშიგ მცირეოდენი ხარვეზები გვხვდება, ის საერთო ჯამში სარწმუნო დასაყრდენია და მისი ნაშრომი საფავიდთა ისტორიის, მთავრობის, ეკონომიკის, ანთროპოლოგიის, რელიგიის, ხელოვნებისა და კულტურის მრავალმხრივი შესწავლის ერთ-ერთი ძირითადი წყაროა.
+შარდენის ნამუშევრის ადრეული მკითხველები გააოცა მისმა ყოვლისმომცველმა მხატვრულმა აღწერამ, და მას მრავალ დიდ მოაზროვნეთა ქება დაუმსახურებია, მათ შორის იყვნენ: მონტესკიუ, რუსო, ვოლტერი და გიბონი. სპარსეთის გვიანდელი მკვლევარები ასევე ხაზს უსვამენ ამ ნამუშევრის ისტორიულ მნიშვნელობას. ჯონ ემერსონის თანახმად: "მისი ინფორმაცია საფავიდი სპარსეთის შესახებ წინ უსწრებს ყველა სხვა დასავლეთის მწერალს სიღმნით, აკურატულობით, მიუკერძოებლობითა და ყოვლისმომცველობით." შარდენი შორს სწვდებოდა, მას თითქმის ყველა კუთხე-კუნჭული ჰქონდა მოვლილი, კარგად ფლობდა სპარსულს, და დატოვა დეტალური აღწერა ყველა იმ ადგილისა და ხალხისა, რომელიც კი გზად მოინახულა. მას ასევე პირდაპირი კავშირი ჰქონდა საფავიდთა სამეფო კართან და მისი აღწერა საფავიდთა თანამედროვე პოლიტიკისა და ადმინისტრაციისა საკმაოდ სრულ ინფორმაციას გვიტოვებს. თუმცა წიგნში შიგადაშიგ მცირეოდენი ხარვეზები გვხვდება, ის საერთო ჯამში სარწმუნო დასაყრდენია და მისი ნაშრომი საფავიდთა ისტორიის, მთავრობის, ეკონომიკის, ანთროპოლოგიის, რელიგიის, ხელოვნებისა და კულტურის მრავალმხრივი შესწავლის ერთ-ერთი ძირითადი წყაროა.
 
-{{ესკიზი}}
+{{ბიოგრაფია}}
 [[კატეგორია:ფრანგები]]
 [[კატეგორია:ფრანგი მოგზაურები]]
 [[კატეგორია:დაბადებული 1643 ]] 
