--- a/ჯულია_ჩაილდი.mw
+++ b/ჯულია_ჩაილდი.mw
@@ -19,6 +19,8 @@
 ==გვიანდელი პერიოდი==
 ==რესურსები ინტერნეტში==
 
+{{ბიოგრაფია}}
+[[კატეგორია:ამერიკელები]]
 [[კატეგორია:ამერიკელი ტელეწამყვანები]]
 [[კატეგორია:ამერიკელი მზარეულები]]
 
