*Empty MediaWiki Message*

--- a/კლარკ_გეიბლი.mw
+++ b/კლარკ_გეიბლი.mw
@@ -6,7 +6,7 @@
 
 მამამისი ხელახლა დაქორწინდა და ახალი ოჯახი ოჰაიოს მეზობელ ქალაქ ჰოუდეილში დასახლდა სადაც კლარკი სკოლაში დადიოდა. გვიანდელი სიყმაწვილის დროს, ოჯახი რავენაში გადასახლდა, აკრონთან ახლოს, სადაც კლარკს შეგუება საკმაოდ გაუჭირდა და მალევე სკოლა მიატოვა აკრონის საბურავების ქარხანაში სამუშაოდ. ერთი თეატრალური დადგმის ნახვის შემდეგ ის ამ პროფესიით ისე მოიხიბლა, რომ მიზნად დაისახა მსახიობი გამხდარიყო თუმცა ამ მიზნის განხორციელებას მხოლოდ ოცდაერთი წლის ასაკიდან ახერხებს, როცა მამამისის მემკვიდრეობით მიღებული ფულით შესაძლებლობა მიეცა ქარხანაში სამსახურისთვის თავი დაენებებინა. ამ დროს ის იწყებს ტურებს მეორე ხარისხის თეატრალურ დასებთან და მოიარა მთელი შუა-დასავლეთი, [[პორტლანდი]] და [[ორეგონი]]. აქ მან ჰალსტუხების გამყიდველის სამსახური იშოვა და დარჩენა გადაწყვიტა. ორეგონში ყოფნის დროს ის ხვდება კარგად ცნობილი მსახიობი ლორა ჰოუპ კრიუს შვილიშვილს, რომელიც მას აქეზებს სცენაზე დაბრუნებას სხვა თეატრალურ კომპანიაში. აქ მას მსახიობობას ჯოზეფინ დილონი ასწავლიდა, რომელმაც მას "კბილი გაულესა" და საბოლოოდ მოამზადა კინოში ეცადა ბედი.
 
-{{ესკიზი}}
+{{ბიოგრაფია}}
 
 [[კატეგორია:ამერიკელები]]
 [[კატეგორია:ამერიკელი მსახიობები]]
