--- a/ვუდი_ალენი.mw
+++ b/ვუდი_ალენი.mw
@@ -13,7 +13,8 @@
 ==ჯილდოები==
 ==რესურსები ინტერნეტში==
 
-
+[[ბიოგრაფია]]
+[[კატეგორია:ამერიკელები]]
 [[კატეგორია:ამერიკელი კინორეჟისორები]]
 
 [[ast:Woody Allen]]
