--- a/ვუდი_ალენი.mw
+++ b/ვუდი_ალენი.mw
@@ -13,7 +13,7 @@
 ==ჯილდოები==
 ==რესურსები ინტერნეტში==
 
-[[ბიოგრაფია]]
+{{ბიოგრაფია}}
 [[კატეგორია:ამერიკელები]]
 [[კატეგორია:ამერიკელი კინორეჟისორები]]
 
