--- a/ჟან_გაბენი.mw
+++ b/ჟან_გაბენი.mw
@@ -8,7 +8,7 @@
 
 1939 წელს მეორე ცოლთან განქორწინების შემდეგ, ჰოლივუდის პერიოდში, გაბენი მარლენ დიტრიხთან სასიყვარულო ურთიერთობა იწყება. მისი ამერიკული ფილმები წარმატებით ვერ სარგებლობს და რთული ხასიათისა და ეგოიზმის გამო ჰოლივუდის კარიერა ჩავარდნის პირას მიჰყავს. ჰოლივუდის კინოპროდიუსერებზე განაწყენებული გაბენი გენერალ დე გოლის ფრანგულ განმათავისუფლებელ არმიას უერთდება, სადაც ის სამხედრო მედალსა (Médaille Militaire) და ომის ჯვარს (Croix de Guerre) იმსახურებს საბრძოლო დამსახურებისთვის ჩრდილოეთ აფრიკაში მოკავშირეებთან ბრძოლებში. გამარჯვების დღის შემდეგ, გაბენი იმ სამხედრო კონტინგენტის ნაწილი იყო, რომელიც განთავისუფლებულ პარზში ტრიუმფალურად შევიდა. მედიის მიერ ფირზე აღბეჭდილია სცენა, სადაც მოუთმენლად მომლოდინე მარლენ დიტრიხი ხალხმრავალ ქუჩაში  გაბენს მოჰკრავს თვალს სამხედრო ტანკზე და მისკენ გარბის.
 
-(დამუშავების პროცესშია)
+{{ბიოგრაფია}}
 
 ==ფილმოგრაფია==
 
