--- a/მარლენ_დიტრიხი.mw
+++ b/მარლენ_დიტრიხი.mw
@@ -20,6 +20,8 @@
 ==რადიო==
 ==რესურსები ინტერნეტში==
 
+
+{{ბიოგრაფია}}
 [[კატეგორია:გერმანელები]]
 [[კატეგორია:გერმანელი მომღერლები]]
 [[კატეგორია:გერმანელი მსახიობები]]
