--- a/ივ_მონტანი.mw
+++ b/ივ_მონტანი.mw
@@ -38,6 +38,7 @@
 ==რესურსები ინტერნეტში==
 *[http://www.imdb.com/name/nm0598971/ ივ მონტანის ბიო კინოფილმების არქივში]
 
+[[კატეგორია:ფრანგები]]
 [[კატეგორია:ფრანგი მსახიობები]]
 
 [[bg:Ив Монтан]]
