--- a/რიზ_უიზერსპუნი.mw
+++ b/რიზ_უიზერსპუნი.mw
@@ -6,8 +6,9 @@
 ==ფილმოგრაფია==
 ==რესურსები ინტერნეტში==
 
-{{ესკიზი}}
+{{ბიოგრაფია}}
 
+[[კატეგორია:ამერიკელები]]
 [[კატეგორია:ამერიკელი მსახიობები]]
 
 [[de:Reese Witherspoon]]
