--- a/ჯორჯ_კლუნი.mw
+++ b/ჯორჯ_კლუნი.mw
@@ -6,6 +6,8 @@
 ==ფილმოგრაფია==
 ==რესურსები ინტერნეტში==
 
+{{ბიოგრაფია}}
+[[კატეგორია:ამერიკელები]]
 [[კატეგორია:ამერიკელი მსახიობები]]
 
 [[bg:Джордж Клуни]]
