--- a/ფრედ_ასტერი.mw
+++ b/ფრედ_ასტერი.mw
@@ -11,7 +11,8 @@
 ==ფილმოგრაფია==
 ==რესურსები ინტერნეტში==
 
-{{ესკიზი}}
+{{ბიოგრაფია}}
+[[კატეგორია:ამერიკელები]]
 [[კატეგორია:ამერიკელი მსახიობები]]
 
 [[bg:Фред Астер]]
