--- a/სერგეი_ეიზენშტეინი.mw
+++ b/სერგეი_ეიზენშტეინი.mw
@@ -16,6 +16,9 @@
 ==ლიტერატურა==
 ==რესურსები ინტერნეტში==
 
+
+{{ბიოგრაფია}}
+[[კატეგორია:რუსები]]
 [[კატეგორია:რუსი კინორეჟისორები]]
 
 [[bs:Sergej Eisenstein]]
