*Empty MediaWiki Message*

--- a/პედრო_ალმოდოვარი.mw
+++ b/პედრო_ალმოდოვარი.mw
@@ -1,4 +1,5 @@
-'''პედრო ალმოდოვარ კაბალიერო''' (Pedro Almodóvar Caballero) (*[[24 სექტემბერი]], [[1949]], [[კალზადა დე კალატრავა]], [[ესპანეთი]]) -- სახელგანთქმული ესპანელი კინორეჟისორი. 1980-იან წლებში პირველი ფილმის გადაღების შემდეგ დღემდე მას უკვე  30-მდე ფილმი აქვს დაწერილი, დადგმული და ზოგ მათგანში შესრულებულიც. მისი ფილმები აგებულია ადამიანურ ურთიერთობებზე, რომელიც ვითარდება წარმოუდგენელ გარემოებებში, დამახასიათებელი მწვავე [[მელოდრამა|მელოდრამითა]] და განზრახ ხაზგასმული "[[კიჩი|კიჩით]]". 
+[[სურათი:Pedro Almodóvar.jpg|thumb|პედრო ალმოდოვარი]]
+'''პედრო ალმოდოვარ კაბალიერო''' (Pedro Almodóvar Caballero) (*[[24 სექტემბერი]], [[1949]], [[კალზადა დე კალატრავა]], [[ესპანეთი]]) -- სახელგანთქმული ესპანელი კინორეჟისორი. 1980-იან წლებში პირველი ფილმის გადაღების შემდეგ დღემდე მას უკვე  30-მდე ფილმი აქვს დაწერილი, დადგმული და ზოგ მათგანში შესრულებულიც. მისი ფილმები აგებულია ადამიანურ ურთიერთობებზე, რომელიც ვითარდება წარმოუდგენელ გარემოებებში, დამახასიათებელი მწვავე [[მელოდრამა|მელოდრამითა]] და განზრახ ხაზგასმული "[[კიჩი|კიჩით]]". ამერიკის კინოაკადემიის [[ოსკარი (ჯილდო)|ოსკარის]] მფლობელი.
 
 ==ადრეული ბიოგრაფია და განათლება==
 პედრო ალმოდოვარი დაიბადა კალზადა-დე-კალატრავაში სიუდად-რეალში, კასტილ-ლა-მანჩას პროვინციაში, თუმცა რვა წლის ასაკში მშობლებთან ერთად კასერესში, ექსტრემადურა, გადავიდა საცხოვრებლად. საშუალო განათლება სალესიელ მამათა სკოლაში მიიღო, ხოლო საუნივერსიტეტო გამოცდები კი ფრანცისკანელი ძმების სკოლაში ჩააბარა. 
