--- a/ენგ_ლი.mw
+++ b/ენგ_ლი.mw
@@ -9,7 +9,7 @@
 
 ==რესურსები ინტერნეტში==
 
-
+{{ბიოგრაფია}}
 [[კატეგორია:ტაივანელები]]
 [[კატეგორია:კინორეჟისორები]]
 [[კატეგორია:დაბადებული  1954]]
