--- a/მიხაელ_ჰანეკე.mw
+++ b/მიხაელ_ჰანეკე.mw
@@ -23,6 +23,7 @@
 ==რესურსები ინტერნეტში==
 *[http://www.bbc.co.uk/films/2001/10/30/michael_haneke_interview.shtml ბი-ბი-სი'ს ინტერვიუ მიხაელ ჰანეკესთან]
 
+{{ბიოგრაფია}}
 [[კატეგორია:ავსტრიელი კინორეჟისორები]]
 [[კატეგორია:ავსტრიელები]]
 
