--- a/სერგო_ფარაჯანოვი.mw
+++ b/სერგო_ფარაჯანოვი.mw
@@ -8,7 +8,7 @@
 ფარაჯანოვი 1990 წლის ივლისში გარდაიცვალა [[ერევანი|ერევანში]], კიბოს დაავადებით.
 
 ==ფილმოგრაფია==
-*ფარაჯანოვი: ბოლო გაზაფხული (1992) (სეგმენტი "აღიარება") http://www.parajanov.com/lastspring.html
+*ფარაჯანოვი: [http://www.parajanov.com/lastspring.html ბოლო გაზაფხული] (1992) (სეგმენტი "აღიარება") 
 *აშუღი ქერიბი (1988) ... აცრ აშიკი ქერიბი (1988) (რუსულად)
 *არაბესკები ფიროსმანის თემაზე (1985)
 *ამბავი სურამის ციხისა (1984) 
