--- a/სერგო_ფარაჯანოვი.mw
+++ b/სერგო_ფარაჯანოვი.mw
@@ -29,7 +29,8 @@
 *[http://moon.yerphi.am/~parm/museum_e.htm ფარაჯანოვის მუზეუმი]
 
 [[კატეგორია:თბილისელები]]
-[[კატეგორია:სომეხი კინორეჟისორები]]
+[[კატეგორია:სომხები]]
+[[კატეგორია:კინორეჟისორები]]
 
 [[en:Sergei Parajanov]]
 [[ja:セルゲイ・パラジャーノフ]]
