*Empty MediaWiki Message*

--- a/მიხეილ_ჭიაურელი.mw
+++ b/მიხეილ_ჭიაურელი.mw
@@ -1,7 +1,7 @@
 [[სურათი:Micheil Tschiaureli.jpg|thumb|200px|მიხეილ ჭიაურელი]]
-'''მიხეილ ჭიაურელი''' (* [[25 იანვარი]], [[1894]], თბილისი - † [[31 ოქტომბერი]], [[1974]], იქვე) -- [[ქართველები|ქართველი]] კინორეჟისორი. საბჭოთა დიქტატორის, იოსებ სტალინის, ცხოვრების ამსახველი პომპეზურ-მონუმენტალური ფილმების ავტორი.
+'''მიხეილ ჭიაურელი''' (* [[25 იანვარი]], [[1894]], თბილისი - † [[31 ოქტომბერი]], [[1974]], იქვე) -- [[ქართველები|ქართველი]] კინორეჟისორი. საბჭოთა დიქტატორის, [[სტალინი|იოსებ სტალინის]], ცხოვრების ამსახველი პომპეზურ-მონუმენტალური ფილმების ავტორი.
 
-{{ესკიზი}}
+{{ბიოგრაფია}}
 
 [[კატეგორია:ქართველები]]
 [[კატეგორია:ქართველი კინორეჟისორები]]
