*Empty MediaWiki Message*

--- a/დიმიტრი_შოსტაკოვიჩი.mw
+++ b/დიმიტრი_შოსტაკოვიჩი.mw
@@ -3,7 +3,7 @@
 
 თავდაპირველი ავანგარდის პერიოდის შემდეგ შოსტაკოვიჩი ძირითადად რომანტიული იდიომით წერდა, [[მალერი, გუსტავ|მალერის]] ძლიერი ზეგავლენით. თუმცა მუსიკოსი ამას ატონალობასთან და შიგადაშიგ ტონალურ გამასთანაც აერთიანებდა. მისი მუსიკა ხშირად შეიცავდა მკვეთრ კონტრასტებსა და გროტესკის ელემენტებს. მის უდიდეს ნამუშევრებად მიიჩნევენ სიმფონიათა და სიმებიანი კვარტეტების სერიას, თხუთმეტი ნაწარმოებით თითოეულ სერიაში. სხვა ნამუშევართა შორისაა ოპერები, ექვსი კონცერტი და დიდი რაოდენობით მუსიკა კინოფილმებისთვის.
 
-{{ესკიზი}}
+{{ბიოგრაფია}}
 
 [[კატეგორია:რუსი კომპოზიტორები]]
 
