--- a/ირმა_ნიორაძე.mw
+++ b/ირმა_ნიორაძე.mw
@@ -16,7 +16,7 @@
 *2002 წელს - რუსეთის დამსახურებული არტისტი, საყოველთაოდ აღიარებულ რუსეთის ქალთა პრემიის "ოლიმპია" ლაურეატი "რუსული ბალეტის სკოლის ტრადიციების შენახვისა და განვითარებისთვის". 
 *2003 წლის სექტემბერი - ყოველწლიური პრემიის "პოზიტანო 2003 - ცეკვის ხელოვნებისთვის" (იტალია) ლაურეატი. 
 
-{{ესკიზი}}
+{{ბიოგრაფია}}
 
 ==რესურსები ინტერნეტში==
 *[http://www.irmanioradze.ru/index.htm ირმა ნიორაძის ოფიციალური ვებ-გვერდი] (რუს., ინგ.)
