--- a/ნინო_ანანიაშვილი.mw
+++ b/ნინო_ანანიაშვილი.mw
@@ -8,6 +8,8 @@
 *საქართველოს სახალხო არტისტი, 1989
 *რუსეთის ფედერაციის სახალხო არტისტი, 1995.
 
+{{ბიოგრაფია}}
+
 ==რესურსები ინტერნეტში==
 *[http://ananiashvili.com/ ანანიაშვილი - პრიმა ბალერინა]
 *[http://www.gpb.ge/board/ninoananiashvili.html ნინოს ბიოგრაფიული ცნობები საქართველოს საზოგადოებრივი მაუწყებლობის ვებ-გვერდზე]
