--- a/ვალერი_გერგიევი.mw
+++ b/ვალერი_გერგიევი.mw
@@ -16,6 +16,7 @@
 *[http://www.gergievfestival.nl/ გერგიევის ფესტივალი]
 
 [[კატეგორია:რუსი დირიჟორები]]
+[[კატეგორია:ოსები]]
 
 [[de:Waleri Abissalowitsch Gergijew]]
 [[en:Valery Gergiev]]
