--- a/ანტონიო_კარლოს_ჟობიმი.mw
+++ b/ანტონიო_კარლოს_ჟობიმი.mw
@@ -13,6 +13,8 @@
 ==დისკოგრაფია==
 ==რესურსები ინტერნეტში==
 
+{{ბიოგრაფია}]
+[[კატეგორია:ბრაზილიელები]]
 [[კატეგორია:ბრაზილიელი მუსიკოსები]]
 [[კატეგორია:ბრაზილიელი მომღერლები]]
 [[კატეგორია:ბრაზილიელი კომპოზიტორები]]
