--- a/ანტონიო_კარლოს_ჟობიმი.mw
+++ b/ანტონიო_კარლოს_ჟობიმი.mw
@@ -13,7 +13,7 @@
 ==დისკოგრაფია==
 ==რესურსები ინტერნეტში==
 
-{{ბიოგრაფია}]
+{{ბიოგრაფია}}
 [[კატეგორია:ბრაზილიელები]]
 [[კატეგორია:ბრაზილიელი მუსიკოსები]]
 [[კატეგორია:ბრაზილიელი მომღერლები]]
