--- a/ელა_ფიცჯერალდი.mw
+++ b/ელა_ფიცჯერალდი.mw
@@ -184,7 +184,7 @@
 * [http://www.thepeaches.com/music/ella/ ელლა ფიცჯერალდის სიმღერების ლირიკა] (სრულყოფილი არქივი)
 * [http://www.cnn.com/SHOWBIZ/9606/15/fitzgerald.obit/index.html CNN-ის ნეკროლოგი]
 
-
+[[კატეგორია:ამერიკელები]]
 [[კატეგორია:ჯაზის შემსრულებლები]]
 
 [[da:Ella Fitzgerald]]
