--- a/ლუი_არმსტრონგი.mw
+++ b/ლუი_არმსტრონგი.mw
@@ -31,7 +31,7 @@
 *[http://www.satchography.com/ დისკოგრაფია]
 *[http://www.satchmo.net/ ლუი არმსტრონგის სახლისა და არქივების ოფიციალური ვებ-გვერდი]
 
-
+{{ბიოგრაფია}}
 [[კატეგორია:ჯაზის შემსრულებლები]]
 [[კატეგორია:ამერიკელები]]
 
