--- a/ნინა_სიმონე.mw
+++ b/ნინა_სიმონე.mw
@@ -4,8 +4,10 @@
 ==ბიბლიოგრაფია==
 ==რესურსები ინტერნეტში==
 
-[[კატეგორია:ჯაზის მომღერლები]]
+{{ბიოგრაფია}}
+[[კატეგორია:ჯაზის შემსრულებლები]]
 [[კატეგორია:ამერიკელი მუსიკოსები]]
+[[კატეგორია:ამერიკელები]]
 
 [[bg:Нина Симон]]
 [[ca:Nina Simone]]
