--- a/ჯონი_კეში.mw
+++ b/ჯონი_კეში.mw
@@ -14,8 +14,8 @@
 *[http://www.johnnycash.com/ ოფიციალური ვებ-გვერდი]
 
 {{მუსიკოსები}}
-{{აშშ}}
 [[კატეგორია:ამერიკელები]]
+[[კატეგორია:ამერიკელი მუსიკოსები]]
 [[კატეგორია:დაბადებული  1932]]
 [[კატეგორია:გარდაცვლილი 2003]]
 
