--- a/ქემალ_ათათურქი.mw
+++ b/ქემალ_ათათურქი.mw
@@ -5,6 +5,9 @@
 ==სამხედრო კარიერა==
 ==ომისშემდგომი ცხოვრება და რეფორმები==
 ==იხ. აგრეთვე==
+
+{{ბიოგრაფია}}
+
 ==რესურსები ინტერნეტში==
 *[http://www.ataturk.net Ataturk.net - ათათურქისადმი მიძღვნილი ვებ-გვერდი]
 *[http://www.turkishembassy.org.au/ataturk/ataturk.htm მისი ბიოგრაფია და რეფორმები]
