*Empty MediaWiki Message*

--- a/წყნარი_ოკეანე.mw
+++ b/წყნარი_ოკეანე.mw
@@ -2,7 +2,7 @@
 '''წყნარი ოკეანე''' (ლათ. Mare Pacificum, "მშვიდი ზღვა", დაარქვა პორტუგალიელმა მკვლევარმა [[მაგელანი, ფერდინანდ|ფერდინანდ მაგელანმა]]) არის მსოფლიოს უდიდიესი წყლის რეზერვუარი. ის მოიცავს დედამიწის ზედაპირის მესამედს, საერთო ფართობით 179,7 მილიონი კვ. კმ.; ოკეანეში დაახლოებით 25.000 კუნძულია, რომელთა უმრავლესობა [[ეკვატორი|ეკვატორის]] სამხრეთით მდებარეობს.
 
 
-{{ესკიზი}}
+{{გეოგრაფია}}
 {{ოკეანეები}}
 [[კატეგორია:ოკეანეები]]
 
