*Empty MediaWiki Message*

--- a/ატლანტის_ოკეანე.mw
+++ b/ატლანტის_ოკეანე.mw
@@ -9,7 +9,7 @@
 
 ატლანტის ოკეანეს უსწორმასწორო სანაპირო აქვს უამრავი ყურით, უბითა და ზღვით. მათ შორისაა [[კარიბის ზღვა]], [[მექსიკის ყურე]], [[სენტ-ლორენსის ყურე]], [[ხმელთაშუა ზღვა]], [[შავი ზღვა]], [[ჩრდილოეთის ზღვა]], [[ლაბრადორის ზღვა]], [[ბალტიის ზღვა]] და [[ნორვეგია-გრენლანდიის ზღვა]]. ოკეანის კუნძულებია: ფაროს კუნძულები, გრენლანდია, ისლანდია, როკალი, დიდი ბრიტანეთი, ირლანდია, ფერნანდო დე ნორონია, აზორის კუნძულები, მადეირას კუნძულები, კანარის კუნძულები, კაბო ვერდეს კუნძულები, სან-ტომე და პრინსიპის კუნძულები, ნიუფაუნდლენდი, ბერმუდის კუნძულები, უესტ-ინდის კუნძულები, ასენსიონი, წმ. ელენეს კუნძულები, ტრინიდადი, მარტინ ვაზი, ტრისტან და კუნია, ფოლკლენდის კუნძულები და სამხრეთ ჯორჯიის კუნძული.
 
-{{ესკიზი}}
+{{გეოგრაფია}}
 {{ოკეანეები}}
 
 
