*Empty MediaWiki Message*

--- a/ინდოეთის_ოკეანე.mw
+++ b/ინდოეთის_ოკეანე.mw
@@ -3,7 +3,7 @@
 
 ინდოეთის ოკეანე თითქმის 10.000 კმ-ია სიგანეში აფრიკის სამხრეთ წერტილსა და ავსტრალიას შორის; მისი ფართობია 73.556.000 კმ², [[წითელი ზღვა|წითელი ზღვისა]] და სპარსეთის ყურის ჩათვლით. ოკეანის მოცულობა გამოთვლით 292,131,000 კმ³ უნდა იყოს. კუნძულები ძირითადად გარშემო მდებარე კონტინენტების სიახლოვესაა. ოკეანის კუნძული-ქვეყნებია: [[მადაგასკარი]] (მსოფლიოს სიდიდით მეოთხე კუნძული), [[კომოროსი]], [[სეიშელები]], [[მალდივები]], [[მაურიტიუსი]] და [[შრი-ლანკა]]. [[ინდონეზია]] ოკეანეს ესაზღვრება. ოკეანის როგორც სატრანზიტო გზის მნიშვნელობამ ის მრავალი კონფლიქტის მომსწრე გახადა. მისი სიდიდის გამო ვერცერთმა ქვეყანამ მასზე ერთპიროვნული კონტროლი ვერ მოახდინა მე-19 საუკუნემდე, როცა [[დიდი ბრიტანეთი]] გახდა თითქმის მთელი მოსაზღვრე მიწების განმგებელი.
 
-{{ესკიზი}}
+{{გეოგრაფია}}
 {{ოკეანეები}}
 
 [[კატეგორია:ოკეანეები]]
