*Empty MediaWiki Message*

--- a/ჩრდილოეთის_ყინულოვანი_ოკეანე.mw
+++ b/ჩრდილოეთის_ყინულოვანი_ოკეანე.mw
@@ -2,7 +2,7 @@
 '''არქტიკის ოკეანე''' ასევე '''ჩრდილოეთის ყინულოვანი ოკეანე''', მდებარეობს რა ძირითადად ჩრდილოეთ პოლარულ რეგიონში, მსოფლიოს ხუთი [[ოკეანე|ოკეანიდან]] უმცირესია დიდიდითა და სიღრმით. მიუხედავად იმისა, რომ [[საერთაშორისო ჰიდროგრაფიული ორგანიზაცია]] მას ოკეანედ სცნობს, ოკეანოგრაფები მას ''არქტიკის ხემლთაშუა ზღვას'' ან შემოკლებით ''არქტიკის ზღვას'' უწოდებენ და [[ატლანტის ოკეანე|ატლანტის]] ერთ-ერთ ხმელთაშუა ზღვად განიხილავენ. ოკეანის ზედაპირის უდიდესი ნაწილი [[ყინული|ყინულითაა]] დაფარული წლის ყველაზე ცივ თვეებში ან მთელი წლის განმავლობაში.
 
 
-{{ესკიზი}}
+{{გეოგრაფია}}
 {{ოკეანეები}}
 [[კატეგორია:ოკეანეები]]
 
