*Empty MediaWiki Message*

--- a/სამხრეთის_ოკეანე.mw
+++ b/სამხრეთის_ოკეანე.mw
@@ -1,9 +1,8 @@
 [[სურათი:Southern Ocean.png|thumb|300px|სამხრეთის ოკეანე]]
 '''სამხრეთის ოკეანე''' წყლის აუზია, რომელიც ანტარქტიკას აკრავს გარს. ის მსოფლიოს სიდიდით მეოთხე [[ოკეანე|ოკეანეა]], მისი საზღვრები ყველაზე გვიან განისაზღვრა და ოკეანედ [[მსოფლიო ჰიდროგრაფიული ორგანიზაცია|მსოფლიო ჰიდროგრაფიული ორგანიზაციის]] (მჰო) მიერ ოფიციალურად მხოლოდ 2000 წელს იქნა ცნობილი, მიხედავად იმისა, რომ მეზღვაური-მკვლევარები მას დიდი ხანია ამ სახელით მოიხსენიებენ. გადაწყვეტილებაზე იმოქმედა ოკეანოგრაფების მიერ ოკეანის დინებათა მნიშვნელობის ბოლო დროინდელმა აღმოჩენებმა. სხვა წყაროები, მათ შორის აშშ-ის ეროვნული გეოგრაფიული საზოგადოება, [[ატლანტიკის ოკეანე|ატლანტიკის, [[წყნარი ოკეანე|წყნარი]] და [[ინდოეთის ოკეანე|ინდოეთის]] ოკეანეების საზღვრებს დღემდე [[ანტარქტიკამდე|ანტარქტიკამდე]] მიიჩნევენ.
 
+{{გეოგრაფია}}
 {{ოკეანეები}}
-
-{{ესკიზი}}
 
 [[კატეგორია:ოკეანეები]]
 
