*Empty MediaWiki Message*

--- a/ბოსფორი.mw
+++ b/ბოსფორი.mw
@@ -5,7 +5,7 @@
 
 ბოსფორს ორი ხიდი ჰკვეთს. პირველი Bogazici (ბორფორი I) სიგრძით 1074 მეტრია და 1973 წელს დასრულდა. მეორე Fatih Sultan Mehmet (ბორფორი II) 1090 მეტრია და 1988 წელს დასრულდა პირველი ხიდიდან დაახ. 5 კმ-ში ჩრდილოეთით. მესამე ხიდი გეგმაშია, თუმცა მისი მომავალი ადგილმდებარეობა საიდუმლოდაა შენახული მიწის ფასების ესკალაციის ასარიდებლად. 
 
-{{ესკიზი}}
+{{გეოგრაფია}}
 
 [[კატეგორია:სრუტეები]]
 [[კატეგორია:ატლანტის ოკეანის აუზი]]
