*Empty MediaWiki Message*

--- a/მარმარილოს_ზღვა.mw
+++ b/მარმარილოს_ზღვა.mw
@@ -10,6 +10,8 @@
 
 ზღვის ძველი ბერძნული სახელი იყო ''პროპონტისი'' (Προποντίς, -ίδος < pro '-მდე' + pontos 'შავი ზღვა')
 
+
+{{გეოგრაფია}}
 [[კატეგორია:ზღვები]]
 [[კატეგორია:ატლანტის ოკეანის აუზი]]
 [[კატეგორია:ხმელთაშუა ზღვა]]
