--- a/ჰაიტი_(ქვეყანა).mw
+++ b/ჰაიტი_(ქვეყანა).mw
@@ -87,6 +87,7 @@
 *[http://www.travelinghaiti.com/  ჰაიტის ისტორია, რუქები და სიახლეები]
 *[http://www.palaisnational.info/  ეროვნული სასახლე]
 
+{{გეოგრაფია}}
 [[კატეგორია: კარიბის ქვეყნები]]
 
 [[als:Haiti]]
