თარგი:საქართველოს ისტორია

--- a/კოლხეთის_სამეფო.mw
+++ b/კოლხეთის_სამეფო.mw
@@ -56,6 +56,7 @@
 ==რესურსები ინტერნეტში==
 ==საკითხავი მასალა==
 
+{{საქართველოს ისტორია}}
 [[კატეგორია:საქართველოს ისტორია]]
 [[კატეგორია:უძველესი ისტორია]]
 
