*Empty MediaWiki Message*

--- a/თრაკია.mw
+++ b/თრაკია.mw
@@ -1,7 +1,7 @@
 [[სურათი:ClassicalBalkans1849.jpg|thumb|300px|კლასიკური თრაკეა და მისი შემოგარენი, ალექსანდრე ფინდლეის ძველი გეოგრაფიის ატლასი, 1849.]]
 '''თრაკეა''' ან '''თრაკია''' (''[[ბერძნული ენა|ბერძნ.]]'': Θρᾴκη, Thrákē, ''[[ბულგარული ენა|ბულგ.]]'': Тракия, ''[[თურქული ენა|თურქ.]]'': Trakya; ''[[ლათინური ენა|ლათ.]]'': Thracia ან Threcia) ისტორიული გეოგრაფიული არეა სამხრეთ-აღმოსავლეთ [[ევროპა|ევროპაში]]. ამჟამად ისტორიული თრაკეას რეგიონი მოიცავს სამხრეთ ბულგარეთს (ჩრდ. თრაკეა), ჩრდილო-აღმოსავლეთ საბერძნეთს (დასავლეთ თრაკეა), და თურქეთის ევროპულ ნაწილს (აღმ. თრაკეა). თრაკეა სამ ზღვას შუა მდებარეობდა: [[შავი ზღვა|შავი]], [[ეგეოსის ზღვა|ეგეოსის]] და [[მარმარისის ზღვა|მარმარისის ზღვები]]. [[თურქეთი|თურქეთში]] მას [[რუმელია|რუმელიასაც]] უწოდებენ. ძველი თრაკეა (ანუ ტერიტორია სადაც ეთნიკური თრაკეელები ცხოვრობდნენ) ასევე მოიცავდა ჩრდილოეთ ბულგარეთს და აღმოსავლეთ სერბიისა და მაკედონიის ნაწილებს.
 
-{{ესკიზი}}
+{{ისტორია}}
 
 [[კატეგორია:ძველი რომის პროვინციები]]
 [[კატეგორია:ბულგარეთის ისტორია]]
