--- a/ჰოკაიდო.mw
+++ b/ჰოკაიდო.mw
@@ -10,6 +10,7 @@
 ==კულტურა==
 ==რესურსები ინტერნეტში==
 
+{{გეოგრაფია}}
 [[კატეგორია:იაპონიის კუნძულები]]
 [[კატეგორია:იაპონიის პრეფექტურები]]
 
@@ -27,7 +28,6 @@
 [[ko:홋카이도]]
 [[id:Prefektur Hokkaido]]
 [[it:Hokkaido]]
-[[ka:ჰოკაიდო]]
 [[la:Hoccaido]]
 [[mk:Хокаидо]]
 [[nl:Hokkaido]]
