*Empty MediaWiki Message*

--- a/მენის_შტატი.mw
+++ b/მენის_შტატი.mw
@@ -11,7 +11,7 @@
 * '''ქალაქები''' – [[ოგასტა]] (დედაქალაქი), 20 ათასი, [[პორტლენდი]], 63 ათასი, [[ლევისტონი]], 37 ათასი. 
 * '''ცნობილი ადამიანები''' – ჰენრი ლონგფელო, კეიტ იუჯინი, ედვარდ რობინსონი.
 
-
+{{აშშ}}
 [[კატეგორია:აშშ-ს შტატები]]
 
 [[bg:&#1052;&#1077;&#1081;&#1085;]]
