*Empty MediaWiki Message*

--- a/Motown.mw
+++ b/Motown.mw
@@ -4,6 +4,7 @@
 
 1960-იან წლებში მოტუანი და მისი სოულ შვილობილები ყველაზე წარმატებული პროპონენტები იყვნენ ე.წ. [[მოტაუნ საუნდი|მოტაუნ საუნდისა]]] - სოულ მუსიკის სტილი გამორჩეული მახასიათებლებით, რომელიც იყენებდა ტამბურინს ბარაბნებით, ბას ინსტრუმეტებს, გამორჩეულ მელოდიურ და აკორდულ სტრუქტურას და გოსპელიდან წარმოშობილ გადაძახების სიმღერის სტილს.
 
+{{მუსიკა}}
 [[კატეგორია:მუსიკალური ჟანრები]]
 [[კატეგორია:ხმის ჩამწერი სტუდიები]]
 
