*Empty MediaWiki Message*

--- a/ნუევო_ტანგო.mw
+++ b/ნუევო_ტანგო.mw
@@ -1,6 +1,7 @@
 '''ნუევო ტანგო''' ან '''ტანგო ნუევო''' (ახალი ტანგო) მუსიკის ფორმაა, რომელიც შეიქმნა ტრადიციულ არგენტინულ [[ტანგო|ტანგოში]] [[ჯაზი|ჯაზისა]] და [[კლასიკური მუსიკა|კლასიკური მუსიკის]] ელემენტების შემოტანით. ამ სტილის ყველაზე მნიშვნელოვანი კომპოზიტორია [[პიაცოლა, ასტორ|ასტორ პიაცოლა]], რომელმაც ტანგოში რევოლუცია მოახდინა ახალი ინსტრუმენტებისა (მაგ. [[საქსოფონი]], [[ელექტრო-გიტარა]]) და ჰარმონიული და მელოდიური სტრუქტურების ახალი ფორმების შემოტანით ტრადიციულ ტანგოს ანსამბლში.
 
 
+{{მუსიკა}}
 [[კატეგორია:მუსიკის ჟანრები]]
 [[კატეგორია:ტანგო]]
 
