*Empty MediaWiki Message*

--- a/ტერნტეიბლიზმი.mw
+++ b/ტერნტეიბლიზმი.mw
@@ -2,7 +2,7 @@
 
 ტარნტეიბლისტი დიჯეები იყენებენ ''ტარნტეიბლ'' (ინგ. ''გადააბრუნე მაგიდა'') ტექნიკას, როგორიცაა "ფხაჭვნა" ან რითმის არევა ორიგინალური მუსიკალური ნამუშევრების კომპოზიციაში. ტარნტეიბლიზმი ფოკუს ახდენს უფრო ტარნტეიბლ ტექნიკაზე ვინემ თავად მიქსირებაზე, რეპინგსა თუ ვოკალურ შედეგზე. ზოგიერთი ტარნტეიბლისტი ცდილობს თავი დაიმკვიდროს როგორც ნამდვილი მუსიკოსი, რომელსაც შეუძლია სხვა შემსრულებლებთან იმპროვიზებული ინტერაქცია.
 
-{{ესკიზი}}
+{{მუსიკა}}
 
 [[კატეგორია:ელექტრონული მუსიკა]]
 
