*Empty MediaWiki Message*

--- a/არქიტექტურა.mw
+++ b/არქიტექტურა.mw
@@ -1,7 +1,7 @@
-'''არქიტექტურა''' (კლასიკ. ბერძ. αρχή - ვიწყებ, τέχνη - ხელოსნობას) -- შენობა-ნაგებობათა დაპროექტებისა და დიზაინის ხელოვნება და მეცნიერება. უფრო ვრცელი გაგებით არქიტექტურა ასევე მოიცავს მთელი სამშენებლო კომპლექსისა და მისი გარემოს დიზაინს, ანუ მაკრო დონიდან - [[ქალაქის დაგეგმარება]], [[ურბანული დიზაინი]] და [[პანორამული არქიტექტურა]], მიკრო დონემდე - [[ინტერიერი|ინტერიერისა]] და ავეჯის შექმნის ჩათვლით. არქიტექტურული [[დიზაინი]] ითვალისწინებს, როგორც მშენებლისთვის ღირებულებასა და საინჟინრო თვალსაზრისით მართებულობას, ასევე მომხმარებლისთვის ფუნქიონალურ და ესთეტიურ მნიშვნელობას.
+'''არქიტექტურა''' (კლასიკ. ბერძ. αρχή - ვიწყებ, τέχνη - ხელოსნობას) -- შენობა-ნაგებობათა დაპროექტებისა და დიზაინის ხელოვნება და მეცნიერება. უფრო ვრცელი გაგებით არქიტექტურა ასევე მოიცავს მთელი სამშენებლო კომპლექსისა და მისი გარემოს დიზაინს, ანუ მაკრო დონიდან - [[ურბანული დაგეგმარება]], [[ურბანული დიზაინი]] და [[პანორამული არქიტექტურა]], მიკრო დონემდე - [[ინტერიერი|ინტერიერისა]] და ავეჯის შექმნის ჩათვლით. არქიტექტურული [[დიზაინი]] ითვალისწინებს, როგორც მშენებლისთვის ღირებულებასა და საინჟინრო თვალსაზრისით მართებულობას, ასევე მომხმარებლისთვის ფუნქიონალურ და ესთეტიურ მნიშვნელობას.
 
 
-{{ესკიზი}}
+{{არქიტექტურა}}
 [[კატეგორია:არქიტექტურა]]
 [[კატეგორია:ხელოვნება]]
 [[კატეგორია:მეცნიერება]]
