*Empty MediaWiki Message*

--- a/ქალაქგეგმარება.mw
+++ b/ქალაქგეგმარება.mw
@@ -1,3 +1,4 @@
+[[სურათი:Gratte ciel toronto.jpg|thumb|300px|[[ტორონტო|ტორონტოს]] საქმიანი ცენტრი]]
 ურბანული, ქალაქისა თუ აგლომერაციის დაგეგმარება მიწის გამოყენების დაგეგმვის დისციპლინაა, რომელიც ურბანული რეგიონების, მუნიციპალიტეტების და საქალაქო უბნების ფიზიკურ, სოციალურ და ეკონომიკურ განვითარებაზე ზრუნავს. განვითარების უფრო მცირე მასშტაბებზე ზრუნავს სხვა პროფესიები, როგორიცაა [[არქიტექტურა]] და [[ურბანული დიზაინი]]. ამის საპირისპიროდ, [[რეგიონალური დაგეგმარება]] იხილავს უფრო ვრცელ გარემოს, და ნაკლებად დეტალურ დონეზე.
 
 ისტორიულად, ურბანული განვითარება ხშირად სპონტანური, ქაოტური მოვლენა იყო ვინემ გაწონასწორებული დაგეგმვის პროცესი. მე-19 საუკუნეში ურბანულმა დაგეგმვამ გავლენა განიცადა ახლად ფორმალიზებული არქიტექტურისა და სამოქალაქო ინჟინერიის დისციპლინებისგან. ამ დისციპლინებმა თანდათან დაიწყო კოდიფიცირება რაციონალური და სტილისტური მიდგომებისა ქალაქის პრობლემების გადაჭრაში ფიზიკური დიზაინის მეშვეობით. 1960-იან წლებში რაციონალური დაგეგმვის მოდელთან კრიტიკულმა მიდგომამ საშუალება მისცა დისციპლინას ურბანული დაგეგმვის დომენში მოეცვა [[ეკონომიკური განვითარება|ეკონომიკური განვითარების]] დაგეგმვის, საზოგოდოების სოციალური დაგეგმვისა და გარემოს დაცვის დაგეგმვის საკითხებიც.
